Fixed: while decorview is null, get the top view of current activity

--- a/robotium-solo/pom.xml
+++ b/robotium-solo/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.jayway.android.robotium</groupId>
 	<artifactId>robotium-solo</artifactId>
-	<version>5.5.5-SNAPSHOT</version>
+	<version>5.5.4-NETEASE</version>
 	<packaging>jar</packaging>
 	<name>Robotium :: Solo</name>
     <parent>
